--- a/SQL_Additional_Analysis.ipynb
+++ b/SQL_Additional_Analysis.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -143,86 +143,89 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>emp_no</th>\n",
-       "      <th>title_id</th>\n",
-       "      <th>birth_date</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>hire_date</th>\n",
+       "      <th>salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>473302</td>\n",
-       "      <td>s0001</td>\n",
-       "      <td>1953-07-25</td>\n",
-       "      <td>Hideyuki</td>\n",
-       "      <td>Zallocco</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1990-04-28</td>\n",
+       "      <td>10001</td>\n",
+       "      <td>$60,117.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>475053</td>\n",
-       "      <td>e0002</td>\n",
-       "      <td>1954-11-18</td>\n",
-       "      <td>Byong</td>\n",
-       "      <td>Delgrande</td>\n",
-       "      <td>F</td>\n",
-       "      <td>1991-09-07</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>$65,828.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>57444</td>\n",
-       "      <td>e0002</td>\n",
-       "      <td>1958-01-30</td>\n",
-       "      <td>Berry</td>\n",
-       "      <td>Babb</td>\n",
-       "      <td>F</td>\n",
-       "      <td>1992-03-21</td>\n",
+       "      <td>10003</td>\n",
+       "      <td>$40,006.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>421786</td>\n",
-       "      <td>s0001</td>\n",
-       "      <td>1957-09-28</td>\n",
-       "      <td>Xiong</td>\n",
-       "      <td>Verhoeff</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1987-11-26</td>\n",
+       "      <td>10004</td>\n",
+       "      <td>$40,054.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>282238</td>\n",
-       "      <td>e0003</td>\n",
-       "      <td>1952-10-28</td>\n",
-       "      <td>Abdelkader</td>\n",
-       "      <td>Baumann</td>\n",
-       "      <td>F</td>\n",
-       "      <td>1991-01-18</td>\n",
+       "      <td>10005</td>\n",
+       "      <td>$78,228.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   emp_no title_id  birth_date  first_name  last_name sex   hire_date\n",
-       "0  473302    s0001  1953-07-25    Hideyuki   Zallocco   M  1990-04-28\n",
-       "1  475053    e0002  1954-11-18       Byong  Delgrande   F  1991-09-07\n",
-       "2   57444    e0002  1958-01-30       Berry       Babb   F  1992-03-21\n",
-       "3  421786    s0001  1957-09-28       Xiong   Verhoeff   M  1987-11-26\n",
-       "4  282238    e0003  1952-10-28  Abdelkader    Baumann   F  1991-01-18"
+       "   emp_no      salary\n",
+       "0   10001  $60,117.00\n",
+       "1   10002  $65,828.00\n",
+       "2   10003  $40,006.00\n",
+       "3   10004  $40,054.00\n",
+       "4   10005  $78,228.00"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_sql('SELECT * FROM employees', conn)\n",
+    "# querying salary table and reading into df\n",
+    "data = pd.read_sql('SELECT * FROM salaries', conn)\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            emp_no\n",
+      "salary            \n",
+      "$99,984.00       1\n",
+      "$99,988.00       1\n",
+      "$99,990.00       1\n",
+      "$99,993.00       1\n",
+      "$99,999.00       1\n",
+      "             emp_no\n",
+      "salary             \n",
+      "$100,000.00       1\n",
+      "$100,006.00       1\n",
+      "$100,022.00       1\n",
+      "$100,025.00       1\n",
+      "$100,026.00       1\n"
+     ]
+    }
+   ],
+   "source": [
+    "hist_df = data.groupby('salary').count()\n",
+    "print(hist_df.head())\n",
+    "print(hist_df.tail())"
    ]
   },
   {
