updating additional analysis script

--- a/SQL_Additional_Analysis.ipynb
+++ b/SQL_Additional_Analysis.ipynb
@@ -198,34 +198,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            emp_no\n",
-      "salary            \n",
-      "$99,984.00       1\n",
-      "$99,988.00       1\n",
-      "$99,990.00       1\n",
-      "$99,993.00       1\n",
-      "$99,999.00       1\n",
-      "             emp_no\n",
-      "salary             \n",
-      "$100,000.00       1\n",
-      "$100,006.00       1\n",
-      "$100,022.00       1\n",
-      "$100,025.00       1\n",
-      "$100,026.00       1\n"
+      "        Salary  Salary Count\n",
+      "0  $100,000.00             1\n",
+      "1  $100,006.00             1\n",
+      "2  $100,022.00             1\n",
+      "3  $100,025.00             1\n",
+      "4  $100,026.00             1\n",
+      "           Salary  Salary Count\n",
+      "50350  $99,984.00             1\n",
+      "50351  $99,988.00             1\n",
+      "50352  $99,990.00             1\n",
+      "50353  $99,993.00             1\n",
+      "50354  $99,999.00             1\n"
      ]
     }
    ],
    "source": [
-    "hist_df = data.groupby('salary').count()\n",
+    "hist_df = data.groupby('salary').count().reset_index()\n",
+    "hist_df.columns=['Salary','Salary Count']\n",
     "print(hist_df.head())\n",
     "print(hist_df.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unable to continue due to money data type created in PG admin for salaries\n",
+    "# observations are the data looks to be fake \n",
+    "#as there are 1 of each salary for each salary type which is unlikely for a company of 50k\n",
+    "\n",
+    "#unable to average due to money type but likely very thin std would hint to data being uniformly incremented to be created."
    ]
   },
   {
