--- a/SQL_Additional_Analysis.ipynb
+++ b/SQL_Additional_Analysis.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "#Connecting to PG Admin and creating engine \n",
-    "db_uri ='postgresql+psycopg2://postgres:Getbig2015@@localhost:5432/Employee_db'\n",
+    "db_uri ='postgresql+psycopg2://postgres:************@localhost:5432/Employee_db'\n",
     "engine = create_engine(db_uri)\n",
     "conn = engine.connect()\n"
    ]
